Archive/5b6e22a41851d90de2a01ea7e91c1807-ad3febf7a884bab73e56b6ba60c751d7/output
+ g++-4.8 -std=c++11 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:6:44: error: invalid initialization of non-const reference of type ‘int&’ from an rvalue of type ‘int’
     int& i_ref = [](int& n) { return n; }(i);
                                            ^
main.cpp:6:10: warning: unused variable ‘i_ref’ [-Wunused-variable]
     int& i_ref = [](int& n) { return n; }(i);
          ^
